--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ after_success:
   - docker push sbalasani/multi-worker
 
 # deploy:
+#   edge: true
 #   provider: elasticbeanstalk
 #   region: us-west-1
 #   app: multi-docker
@@ -37,3 +38,6 @@ after_success:
 #   access_key_id: $AWS_ACCESS_KEY
 #   secret_access_key:
 #     secure: $AWS_SECRET_KEY
+
+# access_key_id: $AWS_ACCESS_KEY
+# secret_access_key: $AWS_SECRET_KEY
